<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>SNCViewClass</class>
 <widget class="QMainWindow" name="SNCViewClass">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>535</width>
    <height>286</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>SNCView</string>
  </property>
  <widget class="QWidget" name="centralWidget"/>
  <widget class="QMenuBar" name="menuBar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>535</width>
     <height>31</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuActions">
    <property name="title">
     <string>Actions</string>
    </property>
    <addaction name="actionBasicSetup"/>
    <addaction name="onStats"/>
    <addaction name="actionExit"/>
   </widget>
   <widget class="QMenu" name="menuSettings">
    <property name="title">
     <string>Settings</string>
    </property>
    <addaction name="actionVideoStreams"/>
    <addaction name="actionSNCStoreSelection"/>
    <addaction name="actionAudioSetup"/>
    <addaction name="actionShow_name"/>
    <addaction name="actionShow_date"/>
    <addaction name="actionShow_time"/>
    <addaction name="actionText_color"/>
   </widget>
   <widget class="QMenu" name="menuHelp">
    <property name="title">
     <string>Help</string>
    </property>
    <addaction name="actionAbout"/>
   </widget>
   <addaction name="menuActions"/>
   <addaction name="menuSettings"/>
   <addaction name="menuHelp"/>
  </widget>
  <widget class="QStatusBar" name="statusBar"/>
  <action name="onStats">
   <property name="text">
    <string>Display stats</string>
   </property>
  </action>
  <action name="actionShow_date">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="checked">
    <bool>true</bool>
   </property>
   <property name="text">
    <string>Show date</string>
   </property>
  </action>
  <action name="actionShow_time">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="checked">
    <bool>true</bool>
   </property>
   <property name="text">
    <string>Show time</string>
   </property>
  </action>
  <action name="actionText_color">
   <property name="text">
    <string>Text color ...</string>
   </property>
  </action>
  <action name="actionShow_name">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="checked">
    <bool>true</bool>
   </property>
   <property name="text">
    <string>Show name</string>
   </property>
  </action>
  <action name="actionAbout">
   <property name="text">
    <string>About</string>
   </property>
  </action>
  <action name="actionBasicSetup">
   <property name="text">
    <string>Basic setup</string>
   </property>
  </action>
  <action name="actionExit">
   <property name="text">
    <string>Exit</string>
   </property>
  </action>
  <action name="actionVideoStreams">
   <property name="text">
    <string>Source streams ...</string>
   </property>
   <property name="iconText">
    <string>Source Streams</string>
   </property>
  </action>
  <action name="actionAudioSetup">
   <property name="text">
    <string>Audio setup</string>
   </property>
   <property name="iconText">
    <string>Audio Setup</string>
   </property>
  </action>
  <action name="actionSNCStoreSelection">
   <property name="text">
    <string>SNCStore selection</string>
   </property>
  </action>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources/>
 <connections/>
</ui>
